--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,13 @@
 　　　　<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 
 　　　　<title>{{ page.title }}</title>
+    
+       {% for css in site.css %}
 
+　　　　　　<link rel="stylesheet" type="text/css" href="{{css.url}}"/>
+
+　　　　{% endfor %}
+       
 　　</head>
 
 　　<body>
