--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,9 +6,9 @@
 
 　　　　<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 
-　　　　<title>{{ page.title }}</title>
+　　　　<title>{{ page.title}}</title>
     
-       {% for css in site.css %}
+       {% for css in site.csss %}
 
 　　　　　　<link rel="stylesheet" type="text/css" href="{{css.url}}"/>
 
