--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,11 +8,7 @@
 
 　　　　<title>{{ page.title}}</title>
     
-       {% for css in site.csss %}
-
-　　　　　　<link rel="stylesheet" type="text/css" href="{{css.url}}"/>
-
-　　　　{% endfor %}
+       <link rel="stylesheet" type="text/css" href="../css/default.css"/>
        
 　　</head>
 
